generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            String          @id @default(cuid())
  name          String?
  email         String          @unique
  emailVerified DateTime?
  image         String?
  accounts      Account[]
  sessions      Session[]
  Authenticator Authenticator[]

  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
  identities       Identity[]
  identityContexts IdentityContext[]
}

model Account {
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([provider, providerAccountId])
}

model Session {
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model VerificationToken {
  identifier String
  token      String
  expires    DateTime

  @@id([identifier, token])
}

// Optional for WebAuthn support
model Authenticator {
  credentialID         String  @unique
  userId               String
  providerAccountId    String
  credentialPublicKey  String
  counter              Int
  credentialDeviceType String
  credentialBackedUp   Boolean
  transports           String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([userId, credentialID])
}

model IdentityContext {
  id     String  @id @default(cuid())
  name   String
  userId String?

  user       User?      @relation(fields: [userId], references: [id], onDelete: Cascade)
  identities Identity[]

  @@unique([userId, name])
}

model Identity {
  id        String   @id @default(cuid())
  userId    String
  contextId String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  validFrom DateTime
  validTo   DateTime?

  courtesyTitle       String?
  givenName           String
  familyName          String
  additionalGivenName String?
  secondaryFamilyName String?
  displayName         String

  image       String?
  background  String?
  email       String?
  description String?
  location    String?
  tel         String?

  user    User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  context IdentityContext @relation(fields: [contextId], references: [id])

  @@unique([userId, contextId])

  shares IdentityShare[]
}

model IdentityShare {
  id         String    @id @default(cuid())
  token      String    @unique
  identityId String
  template   String    @default("professional")
  createdAt  DateTime  @default(now())
  expiresAt  DateTime?
  revokedAt  DateTime?

  identity Identity @relation(fields: [identityId], references: [id], onDelete: Cascade)
}
